@@ -2152,7 +2152,12 @@ def conv (str):
 conversions.append (((2, 3, 11), conv,
 		     '''\\setMmRestFermata -> ^\\fermataMarkup'''))
 
+def conv (str):
+	str = re.sub (r'\\newpage'. r'\\pageBreak', str)
+	return str
 
+conversions.append (((2, 3, 12), conv,
+		     '''\\newpage -> \\pageBreak'''))
 
 
 def conv_mode_experiment (str):
