@@ -1,6 +1,10 @@
+2004-08-19  Graham Percival <gperlist@shaw.ca>
+
+	* scripts/conver-ly.py: add \newpage -> \pageBreak rule.
+
 2004-08-19  Erik Sandberg <ersa9195@student.uu.se>
 
-        * ly/spanners-init.ly: Correct meanings of setTextDecresc/Dim, added setHairpinDecresc/Dim
+	* ly/spanners-init.ly: Correct meanings of setTextDecresc/Dim, added setHairpinDecresc/Dim
 
 2004-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
